Skin: toolbar icons were stretched on Windows, forced correct width.
darcs-hash:20071101145129-8cc29-fcb6e766189d697f8d6a1081d30024c027b200f7.gz

--- a/chrome/skin/classic/sameplace.css
+++ b/chrome/skin/classic/sameplace.css
@@ -102,6 +102,13 @@ toolbarbutton[label="Tools"] {
     height: 16px;
 }
 
+toolbarbutton[label="People"] .toolbarbutton-icon,
+toolbarbutton[label="Status"] .toolbarbutton-icon,
+toolbarbutton[label="Tools"] .toolbarbutton-icon {
+    width: 16px;
+    height: 16px;
+}
+
 toolbarbutton[label="People"] {
     list-style-image: url("chrome://sameplace/skin/contacts.png");
 }
